# COMP371-project

./: Array.cpp  Array.h  CMakeCache.txt  CMakeLists.txt  Makefile  Point.cpp  Point.h  README.md  Test.cpp  Test.h  Triangle.cpp  Triangle.h  array.cpp  cmake_install.cmake  driver  driver.cpp  driver.h  dynamicArray.cpp  dynamicArray.h  point.cpp  point.h
Assignment2/: CMakeCache.txt  Makefile  OpenGLAssignment  cmake_install.cmake  main.cpp  shader.vs
Assignment3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  tiny_obj_loader.cpp  tiny_obj_loader.h
